# PhaseII-TrappingEfficiency

./: .gitignore  .gitmodules  CMakeLists.txt  FieldProfile.root
src/MagneticField/: CMakeLists.txt  MagneticField.cpp  MagneticField.h
src/Toolbox/: CMakeLists.txt  Constant.cpp
src/Trapping/: CMakeLists.txt  TrappingEfficiency.cpp
src/exe/: CMakeLists.txt  main.cxx
